Downgrade to 1.20.1